syntax = "proto3";

package proto;

import "sqlflow.proto";

// Protobuf format intermediate representations for SQLFlow.
// All structs should be exactly the same as structs defined in `pkg/sql/ir/ir.go`
// You may refer to `ir.go` and `feature_collumn.go` for the meaning of each field.

message FieldMeta {
    string name = 1;
    string dtype = 2;
    string delimiter = 3;
    repeated int32 shape = 4;
    bool is_sparse = 5;
    map<string, string> vocabulary = 6;
    int32 maxID = 7;
}

message NumericColumn {
    FieldMeta field_meta = 1;
}

message BucketColumn {
    NumericColumn source_column = 1;
    repeated int32 boundaries = 2;
}

message CrossColumn {
    repeated FeatureColumn keys = 1;
    int32 hash_bucket_size = 2;
}

message CategoryIDColumn {
    FieldMeta field_meta = 1;
    int32 bucket_size = 2;
}

message SeqCategoryIDColumn {
    FieldMeta field_meta = 1;
    int32 bucket_size = 2;
}

message EmbeddingColumn {
    oneof category_column {
        CategoryIDColumn category_col = 1;
        SeqCategoryIDColumn seq_category_col = 2;
    }
    int32 dimension = 3;
    string combiner = 4;
    string initializer = 5;
}

message FeatureColumn {
    oneof feature_column {
        NumericColumn nc = 1;
        BucketColumn bc = 2;
        CrossColumn cc = 3;
        CategoryIDColumn catc = 4;
        SeqCategoryIDColumn seqcatc = 5;
        EmbeddingColumn embc = 6;
    }
}

message FeatureColumnList {
    repeated FeatureColumn feature_columns = 1;
}

message Attribute {
    message IntList {
        repeated int32 il = 1;
    }    
    message FloatList {
        repeated float fl = 1;
    }
    message StringList {
        repeated string sl = 1;
    }
    oneof attribute {
        int32 i = 1;
        float f = 2;
        string s = 3;
        IntList il = 4;
        FloatList fl = 5;
        StringList sl = 6;
    }
}

message TrainIR {
    string datasource = 1;
    string select = 2;
    string validation_select  = 3;
    string estimator = 4;
    map<string, Attribute> attributes = 5;
    map<string,FeatureColumnList> features = 6;
    FeatureColumn label = 7;
    Session session = 8;
    string into = 9;
}

// TODO(typhoonzero): add AnalyzeIR, PredictIR